--- a/style.css/style.css
+++ b/style.css/style.css
@@ -1,33 +1,69 @@
-.body{
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
+  body{
     height:100vh;
-    justify-content: center;
-    
-}
-.contiDiv1{
-    margin-top:10%;
+    /* justify-content: center; */
+  }
+  
+  button{
+    padding: 2px;
+    margin: 2px;
+    border:none;
+    background-color: white;
+  }
+  
+  button:hover{
+  cursor: pointer;
+  }
+  
+  .contiDiv1{
+    /* margin-top:10%; */
     display:flex;
     justify-content: center;
     border:2px red solid;
-}
-.contiDiv2{
+  }
+  
+  .contiDiv2{
     display:flex;
     justify-content: center;
     border:2px red solid;
     align-items: center;
-}
-.button{
+  }
+  
+  
+  .button{
     font-size:15px;
-}
-.buttonconti{
+  }
+  
+  .buttonConti{
     font-size:15px;
-}
-.canvas{
-   margin-top:5%;
-   height: 100%;
-}
-#chartContinent{
+  }
+  
+  .canvas{
+   margin-top:20px;
+   width: 100%;
+   height: 80%;
+   border:2px red solid;
+  }
+  
+  #chartContinent{
     margin: auto;
-    width:50%;
-    height:10%;
-    border:2px red solid;
-}
+    width:70%;
+    /* height:10%; */
+  }
+  .casesForEachCountry{
+      width: 100%;
+      height:30%;
+      display:flex;
+      justify-content: space-around;
+      border:violet 2px solid;
+  }
+  .box{
+      width:10%;
+      height: 50%;
+      border:2px solid green;
+  }
